<resources>
    <string name="app_name">EndMill calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_load_text">Loading...</string>
    <string name="helix_title_text">Calculation helix angle to lead</string>
    <string name="diameter_title_text">Tool diameter</string>
    <string name="diameter_input_hint">Enter tool diameter</string>
    <string name="helix_input_hint">Enter helix</string>
    <string name="lead_input_hint">Enter lead</string>
    <string name="helix_calc_text">Calculate</string>
    <string name="helix_lead_swich">SwichHelix</string>
    <string name="to_lead_from_helix">lead from helix</string>
    <string name="to_helix_from_lead">helix from lead</string>
    <string name="tool_diametet_himt">Enter tool diameter</string>
    <string name="eccentric_title">Eccentric contact grinding point</string>
    <string name="back_taper_title">Back taper calculation for Drill</string>
    <string name="lowering_hint">lowering by 100 mm</string>
    <string name="length">Length</string>
    <string name="input_land">Enter land width</string>
</resources>