<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helixFragment_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/helix_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helix_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/page_title" />

    <EditText
        android:id="@+id/helix_diameter_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/diameter_input_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helix_title" />

    <EditText
        android:id="@+id/helix_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/helix_input_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helix_diameter_input" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="helix_input" />

    <TextView
        android:id="@+id/to_lead_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:padding="12dp"
        android:text="@string/to_lead_from_helix"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/helix_to_lead_switch"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/helix_to_lead_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/to_helix_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/to_helix_from_lead"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/helix_to_lead_switch"
        app:layout_constraintTop_toBottomOf="@id/barrier" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_button"
        android:text="@string/helix_calc_text"
        app:layout_constraintTop_toBottomOf="@id/helix_to_lead_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        tools:text="45.366"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>