<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back_taper_title"
        style="@style/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/back_taper_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/start_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="back_taper_title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/end_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="back_taper_title" />

    <EditText
        android:id="@+id/input_diameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/diameter_input_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toEndOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@+id/back_taper_title" />

    <EditText
        android:id="@+id/lowering"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lowering_hint"
        android:inputType="numberDecimal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/input_diameter" />

    <EditText
        android:id="@+id/length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/length"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/lowering" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_button"
        android:text="@string/helix_calc_text"
        app:layout_constraintTop_toBottomOf="@id/length"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        android:layout_marginTop="@dimen/top_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result_od_label"
        tools:text="Diameter for length 25"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="13.5"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/result_od_label"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:id="@+id/result_od"/>
    <TextView
        android:layout_width="0dp"
        android:padding="2dp"
        android:layout_height="wrap_content"
        tools:text="Full back taper is 34 degrees, 17 degres on side"
        app:layout_constraintStart_toStartOf="@id/start_line"
        app:layout_constraintEnd_toEndOf="@id/end_line"
        app:layout_constraintTop_toBottomOf="@id/result_od"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:minLines="3"
        android:id="@+id/result_angel"/>
</androidx.constraintlayout.widget.ConstraintLayout>